--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
+.bg-tombol {
+  background-color: #fbab7e;
+  background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+  border: none;
+  color: white;
+}
+.bg-tombol:hover {
+  background-color: #fd9457;
+  background-image: linear-gradient(62deg, #fd9457 0%, #f7ce68 100%);
+}
+
+.warna {
+  color: #fbab7e;
+}
