--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,12 @@
 .warna {
   color: #fbab7e;
 }
+
+/* .inp:focus {
+  outline: none !important;
+} */
+
+.form-control:focus {
+  border-color: transparent !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #fbab7e !important;
+}
