--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .warna {
-  color: #fbab7e;
+  color: #fbab7e !important;
 }
 
 /* .inp:focus {
@@ -25,4 +25,8 @@
 .form-control:focus {
   border-color: transparent !important;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #fbab7e !important;
+}
+
+.login-placeholder::placeholder {
+  color: #fbab7e !important;
 }
