--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,17 @@
 .login-placeholder::placeholder {
   color: #fbab7e !important;
 }
+
+/* @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+.slick-prev:before,
+.slick-next:before {
+  content: ">" !important;
+  font-family: "Nanum Gothic", sans-serif !important;
+  font-weight: 800 !important;
+  color: red !important;
+
+  overflow: hidden !important;
+  width: 5px !important;
+  height: 5px !important;
+  font-size: 50px !important;
+} */
